--- a/templates/changestore.html
+++ b/templates/changestore.html
@@ -27,6 +27,10 @@
       margin-bottom: 20px;
     }
 
+    label {
+      font-weight: bold;
+      display: block;
+    }
 
     select {
       width: 100%;
