--- a/templates/addstore.html
+++ b/templates/addstore.html
@@ -25,6 +25,9 @@ Add Store
       margin-bottom: 20px;
     }
 
+    label {
+      font-weight: bold;
+    }
 
     input[type="number"],
     input[type="text"] {
